# brain

./: .brain_db.sqlite3  .brainignore  .gitignore  BRAIN.md  CHANGELOG.md  readme.md
.brain/: manifest.json
docs/: ARCHITECTURE_OVERVIEW.md  CONTRIBUTING.md  DEV_PHILOSOPHY.md  ROADMAP.md  START_HERE.md
docs/auditor reports/: 1-cost-perf.md  2-redteam.md  3-blueteam.md  4-privacy-compliance.md  5-human-factors-ux-safety.md  6-self-reflection.md  readme.md
docs/cli/: Cargo.toml
docs/cli/src/: conclude.rs  context.rs  db.rs  governor.rs  main.rs  manifest.rs  model.rs  next.rs  reflect.rs  sketch.rs  utils.rs  verifier.rs  versioning.rs
docs/history/: ADR-001_Initial_Protocol_Design.md  ADR-002_Diranalyze_Integration_And_Workflow_Refinements.md
docs/prompts/: architect.md  coder.md  qa_agent.md  reflector.md  upe.md
docs/reflection_qa/: ldst_v0.md
docs/schema/: task_v2.jsonschema
docs/scripts/: Cargo.toml
docs/scripts/src/: api_client.rs  conclude.rs  context.rs  db.rs  governor.rs  loader.rs  main.rs  model.rs  next.rs  sketch.rs  verifier.rs  versioning.rs
docs/state/: tasks.template.yaml  tasks.yaml
schema/: task_v2.jsonschema
src/: main.js
