# Corrected FILE: docs/scripts/Cargo.toml

[package]
name = "brain-cli"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
rustyline = "14.0"
shlex = "1.1"

# --- Cannibalized from diranalyze ---
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }